set(OPTIMIZER_OUTPUT_SAVER_NAME "optimizer_output_saver")
set(OPTIMIZER_INTERFACE_NAME "optimizer_interface")
set(LOGGER_INTERFACE_NAME "logger_interface")
set(RANDOM_LIB_NAME "random_lib")

add_subdirectory("random")
add_subdirectory("optimizer_output_saver")
add_subdirectory("optimizer_interface")
add_subdirectory("logger_interface")
add_subdirectory("classic_genetic_optimizer")
add_subdirectory("evolutionary_optimizer")