add_subdirectory("lib")

if(BUILD_TESTING)
    message("Tests enabled")
    add_subdirectory("tests")
else()
    message("Tests not enabled")
endif()

if(COMPILE_EXAMPLE)
    message("Compiling with example executable")
    add_subdirectory("example")
else()
    message("Compiling without example executable")
endif()